再生トラックの制約対応 (24パートのコーラス有りまで対応)